--- a/aerospace.toml
+++ b/aerospace.toml
@@ -10,7 +10,7 @@ config-version = 2
 after-startup-command = []
 
 # Start AeroSpace at login
-start-at-login = false
+start-at-login = true
 
 # Normalizations. See: https://nikitabobko.github.io/AeroSpace/guide#normalization
 enable-normalization-flatten-containers = true
@@ -45,9 +45,20 @@ automatically-unhide-macos-hidden-apps = false
 # even when they are invisible.
 # This config version is only available since 'config-version = 2'
 # Fallback value (if you omit the key): persistent-workspaces = []
-persistent-workspaces = ["1", "2", "3", "4", "5", "6", "7", "8", "9", "A", "B",
-                         "C", "D", "E", "F", "G", "I", "M", "N", "O", "P", "Q",
-                         "R", "S", "T", "U", "V", "W", "X", "Y", "Z"]
+persistent-workspaces = ["Work", "work++", "work#", "schedule", "browser", "6", "7", "8", "chat", "A"]
+
+# Assign workspaces to monitors (1-indexed). See:
+# https://nikitabobko.github.io/AeroSpace/guide#assign-workspaces-to-monitors
+[workspace-to-monitor-force-assignment]
+Work = 2
+"work++" = 2
+"work#" = 2
+schedule = 2
+browser = 1
+6 = 2
+7 = 2
+8 = 2
+chat = 1
 
 # A callback that runs every time binding mode changes
 # See: https://nikitabobko.github.io/AeroSpace/guide#binding-modes
@@ -57,7 +68,7 @@ on-mode-changed = []
 # Possible values: (qwerty|dvorak|colemak)
 # See https://nikitabobko.github.io/AeroSpace/guide#key-mapping
 [key-mapping]
-    preset = 'qwerty'
+    preset = 'dvorak'
 
 # Gaps between windows (inner-*) and between monitor edges (outer-*).
 # Possible values:
@@ -118,32 +129,32 @@ on-mode-changed = []
     alt-k = 'focus up'
     alt-l = 'focus right'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#move
-    alt-shift-h = 'move left'
-    alt-shift-j = 'move down'
-    alt-shift-k = 'move up'
-    alt-shift-l = 'move right'
+    # See: https://nikitabobko.github.io/AeroSpace/commands#join-with
+    alt-shift-h = 'join-with left'
+    alt-shift-j = 'join-with down'
+    alt-shift-k = 'join-with up'
+    alt-shift-l = 'join-with right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#resize
     alt-minus = 'resize smart -50'
     alt-equal = 'resize smart +50'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#workspace
-    alt-1 = 'workspace 1'
-    alt-2 = 'workspace 2'
-    alt-3 = 'workspace 3'
-    alt-4 = 'workspace 4'
-    alt-5 = 'workspace 5'
+    alt-1 = 'workspace Work'
+    alt-2 = 'workspace work++'
+    alt-3 = 'workspace work#'
+    alt-4 = 'workspace schedule'
+    alt-5 = 'workspace browser'
     alt-6 = 'workspace 6'
     alt-7 = 'workspace 7'
     alt-8 = 'workspace 8'
-    alt-9 = 'workspace 9'
+    alt-9 = 'workspace chat'
     alt-a = 'workspace A' # In your config, you can drop workspace bindings that you don't need
     alt-b = 'workspace B'
     alt-c = 'workspace C'
     alt-d = 'workspace D'
     alt-e = 'workspace E'
-    alt-f = 'workspace F'
+    alt-f = 'fullscreen'
     alt-g = 'workspace G'
     alt-i = 'workspace I'
     alt-m = 'workspace M'
@@ -162,15 +173,15 @@ on-mode-changed = []
     alt-z = 'workspace Z'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#move-node-to-workspace
-    alt-shift-1 = 'move-node-to-workspace 1'
-    alt-shift-2 = 'move-node-to-workspace 2'
-    alt-shift-3 = 'move-node-to-workspace 3'
-    alt-shift-4 = 'move-node-to-workspace 4'
-    alt-shift-5 = 'move-node-to-workspace 5'
+    alt-shift-1 = 'move-node-to-workspace Work'
+    alt-shift-2 = 'move-node-to-workspace work++'
+    alt-shift-3 = 'move-node-to-workspace work#'
+    alt-shift-4 = 'move-node-to-workspace schedule'
+    alt-shift-5 = 'move-node-to-workspace browser'
     alt-shift-6 = 'move-node-to-workspace 6'
     alt-shift-7 = 'move-node-to-workspace 7'
     alt-shift-8 = 'move-node-to-workspace 8'
-    alt-shift-9 = 'move-node-to-workspace 9'
+    alt-shift-9 = 'move-node-to-workspace chat'
     alt-shift-a = 'move-node-to-workspace A'
     alt-shift-b = 'move-node-to-workspace B'
     alt-shift-c = 'move-node-to-workspace C'
@@ -213,7 +224,57 @@ on-mode-changed = []
     # sticky is not yet supported https://github.com/nikitabobko/AeroSpace/issues/2
     #s = ['layout sticky tiling', 'mode main']
 
-    alt-shift-h = ['join-with left', 'mode main']
-    alt-shift-j = ['join-with down', 'mode main']
-    alt-shift-k = ['join-with up', 'mode main']
-    alt-shift-l = ['join-with right', 'mode main']
+    alt-shift-h = ['move left', 'mode main']
+    alt-shift-j = ['move down', 'mode main']
+    alt-shift-k = ['move up', 'mode main']
+    alt-shift-l = ['move right', 'mode main']
+
+# See: https://nikitabobko.github.io/AeroSpace/guide#on-window-detected-callback
+[[on-window-detected]]
+if.app-name-regex-substring = 'terminal|alacritty|iterm'
+run = 'move-node-to-workspace work#'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'cursor'
+run = 'move-node-to-workspace Work'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'rider'
+run = 'move-node-to-workspace work++'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'safari'
+run = 'move-node-to-workspace browser'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'chrome'
+run = 'move-node-to-workspace browser'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'obsidian'
+run = 'move-node-to-workspace schedule'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'mail'
+if.app-id = 'com.apple.mail'
+run = 'move-node-to-workspace schedule'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'calendar'
+run = 'move-node-to-workspace schedule'
+
+[[on-window-detected]]
+if.app-name-regex-substring = '^notion$'
+run = 'move-node-to-workspace schedule'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'notion calendar'
+run = 'move-node-to-workspace schedule'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'zoom'
+run = 'move-node-to-workspace chat'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'whatsapp'
+run = 'move-node-to-workspace chat'
