--- a/aerospace.toml
+++ b/aerospace.toml
@@ -135,11 +135,11 @@ on-mode-changed = []
     alt-k = 'focus up'
     alt-l = 'focus right'
 
-    # See: https://nikitabobko.github.io/AeroSpace/commands#join-with
-    alt-shift-h = 'join-with left'
-    alt-shift-j = 'join-with down'
-    alt-shift-k = 'join-with up'
-    alt-shift-l = 'join-with right'
+    # See: https://nikitabobko.github.io/AeroSpace/commands#swap
+    alt-shift-h = 'swap left'
+    alt-shift-j = 'swap down'
+    alt-shift-k = 'swap up'
+    alt-shift-l = 'swap right'
 
     # See: https://nikitabobko.github.io/AeroSpace/commands#resize
     alt-minus = 'resize smart -50'
