Enhance aerospace.toml and add workspace navigation scripts
- aerospace.toml: Disable "hide application" and "hide others" key bindings.
- Added scripts for switching to the next and previous workspaces on the monitor under the mouse, allowing trackpad gesture assignments.

Made-with: Cursor

--- a/aerospace.toml
+++ b/aerospace.toml
@@ -97,6 +97,9 @@ on-mode-changed = []
 # 'main' binding mode must be always presented
 # Fallback value (if you omit the key): mode.main.binding = {}
 [mode.main.binding]
+    # Goodness #10: disable "hide application" / "hide others"
+    cmd-h = []
+    cmd-alt-h = []
 
     # All possible keys:
     # - Letters.        a, b, c, ..., z
